criando logs de erro

--- a/src/views/administracao/usuarios/index.ejs
+++ b/src/views/administracao/usuarios/index.ejs
@@ -27,7 +27,7 @@
                   <td><%= usuario.nickname %></td>
                   <td><%= usuario.email %></td>
                   <td>
-                    <a href="">Editar</a>
+                    <a href="/usuario/editar/<%= usuario.id %>">Editar</a>
                     <a href="">Excluir</a>
                   </td>
                 </tr>
