--- a/src/views/administracao/usuarios/usuario.ejs
+++ b/src/views/administracao/usuarios/usuario.ejs
@@ -11,28 +11,37 @@
 
         <%- include('../../includes/messages'); %>
         
+        <% if(usuario.id) { %>
+          <form action="/usuario/atualizar/<%= usuario.id %>" method="POST">
+        <% } else { %>
           <form action="/usuario/registrar" method="POST">
+        <% } %>
           <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" class="form-control" id="nome" name="nome">
+            <input value="<%= usuario.nome %>" type="text" class="form-control" id="nome" name="nome">
           </div>
 
           <div class="form-group">
             <label for="nickname">nickname</label>
-            <input  type="text" class="form-control" id="nickname" name="nickname">
+            <input value="<%= usuario.nickname %>" type="text" class="form-control" id="nickname" name="nickname">
           </div>
 
           <div class="form-group">
             <label for="email">Email</label>
-            <input  type="email" class="form-control" id="email" name="email">
+            <input value="<%= usuario.email %>" type="email" class="form-control" id="email" name="email">
           </div>
 
           <div class="form-group">
             <label for="senha">Senha</label>
-            <input type="password" class="form-control" id="senha" name="senha">
+            <input value="<%= usuario.senha %>" type="password" class="form-control" id="senha" name="senha">
           </div>
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-          <button type="submit" class="btn btn-primary">Salvar</button>
+
+          <div class="m-3">
+            <button type="submit" class="btn btn-primary">Salvar</button>
+            <a class="btn btn-danger" href="/usuario">Voltar</a>
+          </div>
+          
         </form>
       </div>
 
