--- a/src/views/administracao/includes/footer.ejs
+++ b/src/views/administracao/includes/footer.ejs
@@ -27,6 +27,8 @@
       <script src="/assets/datatables/1.13.7/js/jquery.dataTables.min.js"></script>
 
       <script src="/assets/datatables/1.13.7/tabelas.js"></script>
+
+      <script src="/assets/main.js"></script>
   
     </body>
   </html>
