--- a/src/views/administracao/usuarios/index.ejs
+++ b/src/views/administracao/usuarios/index.ejs
@@ -28,7 +28,7 @@
                   <td><%= usuario.email %></td>
                   <td>
                     <a href="/usuario/editar/<%= usuario.id %>">Editar</a>
-                    <a href="">Excluir</a>
+                    <a href="#" class="excluir-usuario" id="<%= usuario.id %>">Excluir</a>
                   </td>
                 </tr>
               <% }); %>
@@ -37,6 +37,23 @@
       </div>
 
       <div class="col-lg-2"></div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="excluirUsuario" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Excluir usuário</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
     </div>
   </div>
 
