Modificando forma de editar usuário

--- a/src/views/administracao/usuarios/index.ejs
+++ b/src/views/administracao/usuarios/index.ejs
@@ -29,7 +29,7 @@
                   <td><%= usuario.nickname %></td>
                   <td><%= usuario.email %></td>
                   <td>
-                    <a href="/usuario/editar/<%= usuario.id %>">Editar</a>
+                    <a href="#" class="editar-usuario" id="<%= usuario.id %>">Editar</a>
                     <a href="#" class="excluir-usuario" id="<%= usuario.id %>">Excluir</a>
                   </td>
                 </tr>
