--- a/src/views/administracao/includes/nav.ejs
+++ b/src/views/administracao/includes/nav.ejs
@@ -6,13 +6,13 @@
   <hr>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item">
-      <a href="/" class="nav-link active" aria-current="page">
+      <a href="/" class="nav-link text-white">
         <i class="fa-solid fa-house"></i>
         Home
       </a>
     </li>
     <li>
-      <a href="" class="nav-link text-white">
+      <a href="/menu" class="nav-link text-white">
         <i class="fa-solid fa-chart-simple"></i>
         Dashboard
       </a>
