criando outros menus

--- a/src/views/administracao/includes/nav.ejs
+++ b/src/views/administracao/includes/nav.ejs
@@ -18,13 +18,13 @@
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link text-white">
+      <a href="/servicos" class="nav-link text-white">
         <i class="fa-regular fa-handshake"></i>
         Serviços
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link text-white">
+      <a href="/produtos" class="nav-link text-white">
         <i class="fa-solid fa-truck"></i>
         Produtos
       </a>
