--- a/src/views/administracao/index.ejs
+++ b/src/views/administracao/index.ejs
@@ -2,6 +2,9 @@
 <%- include('includes/nav'); %>
 
    <div class="container">
+      <h1 class="text-center">Dashboard</h1>
+        <p class="text-center lead">Gráficos e widgets de administração do site.</p>
+
       <%- include('../includes/messages'); %>
 
 
