iniciando parte de produtos e servicos

--- a/src/views/administracao/includes/footer.ejs
+++ b/src/views/administracao/includes/footer.ejs
@@ -28,6 +28,9 @@
 
       <script src="/assets/datatables/1.13.7/tabelas.js"></script>
 
+      <!--Códigos Específicos-->
+      <script src="/assets/modules/usuarios-main.js"></script>
+      <script src="/assets/modules/produtos-main.js"></script>
       <script src="/assets/main.js"></script>
   
     </body>
