--- a/src/views/administracao/produtos/index.ejs
+++ b/src/views/administracao/produtos/index.ejs
@@ -9,10 +9,14 @@
         <h1 class="text-center">Produtos</h1>
         <p class="text-center lead">Lista de produtos.</p>
 
+        <button id="novo-produto" class="btn btn-success">Cadastrar Produto</button>
+
       </div>
 
       <div class="col-lg-2"></div>
     </div>
   </div>
+
+  <%- include('../includes/modals'); %>
 
 <%- include('../includes/footer'); %>
