--- a/src/views/administracao/usuarios/index.ejs
+++ b/src/views/administracao/usuarios/index.ejs
@@ -42,6 +42,6 @@
     </div>
   </div>
 
-  <%- include('modals'); %>
+  <%- include('../includes/modals'); %>
 
 <%- include('../includes/footer'); %>
