--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand">Veterinario</a>
+    <a class="navbar-brand" href="/">Veterinario</a>
     
       <% if(usuario) { %>
         <a class="link-secondary  link-offset-2 link-underline link-underline-opacity-0" href="/menu">Administração (<%= usuario.nickname %>)</a>
