--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,7 +19,7 @@
                     <h3 class="mb-0">Conheça nossos produtos</h3>
                     <p class="card-text mb-auto">Descubra o melhor para o seu fiel companheiro! Produtos de qualidade que fazem os rabos abanarem e os corações se aquecerem. Sua jornada para o bem-estar animal começa aqui. 🐾✨ #AmorPet #BemEstarAnimal</p>
                     
-                    <a href="#" class="icon-link gap-1 icon-link-hover stretched-link my-3">
+                    <a href="/listaDeProdutos" class="icon-link gap-1 icon-link-hover stretched-link my-3">
                         Quero dar uma olhada!
                     </a>
                 </div>
@@ -36,7 +36,7 @@
                   <strong class="d-inline-block mb-2 text-success-emphasis">Serviços</strong>
                   <h3 class="mb-0">Conheça nossos serviços</h3>
                   <p class="mb-auto">Compromisso com a Saúde e Felicidade dos Seus Pets! Oferecemos serviços essenciais, desde castração até vacinação, para garantir uma vida longa e feliz aos seus amigos peludos. Cuide, ame e proteja com os nossos serviços especializados. 🌟🐾 #SaúdePet #AmorIncondicional</p>
-                  <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                  <a href="listaDeServicos" class="icon-link gap-1 icon-link-hover stretched-link">
                     Continue ver os serviços
                     
                   </a>
