--- a/src/views/administracao/produtos/form/novoProduto.ejs
+++ b/src/views/administracao/produtos/form/novoProduto.ejs
@@ -1,11 +1,11 @@
-<form action="/produtos/registrar" method="POST">
+<form id="cadastrar-produto" action="/produtos/registrar" method="POST" enctype="multipart/form-data">
     <div class="mb-3">
       <label for="nomeProduto" class="form-label">Nome Produto</label>
-      <input  id="nomeProduto" type="text" class="form-control" name="nomeProduto" placeholder="Ração de cachorro">
+      <input  id="nomeProduto" type="text" class="form-control" name="nome" placeholder="Ração de cachorro">
     </div>
     <div class="mb-3">
       <label for="descricaoProduto" class="form-label">Descrição do Produto</label>
-      <textarea id="descricaoProduto" class="form-control" name="descricaoProduto" rows="3"></textarea>
+      <textarea id="descricaoProduto" class="form-control" name="descricao" rows="3"></textarea>
     </div>
     <div class="mb-3">
       <label for="imagemProduto" class="form-label">Imagem do Produto</label>
