--- a/src/views/administracao/produtos/index.ejs
+++ b/src/views/administracao/produtos/index.ejs
@@ -9,7 +9,33 @@
         <h1 class="text-center">Produtos</h1>
         <p class="text-center lead">Lista de produtos.</p>
 
-        <button id="novo-produto" class="btn btn-success">Cadastrar Produto</button>
+        <button id="novo-produto" class="btn btn-success  my-3">Cadastrar Produto</button>
+
+        <%- include('../../includes/messages'); %>
+
+        <table id="produtoTabela">
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>Descrição</th>
+              <th>Imagem</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% produtos.forEach( produto => { %>
+              <tr>
+                <td><%= produto.nome %></td>
+                <td><%= produto.descricao %></td>
+                <td><%= produto.imagem %></td>
+                <td>
+                  <a href="#" class="editar-produto" id="<%= produto.id %>">Editar</a>
+                  <a href="#" class="excluir-produto" id="<%= produto.id %>">Excluir</a>
+                </td>
+              </tr>
+            <% }); %>
+          </tbody>
+        </table>
 
       </div>
 
